# jwt-test-server

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.org  users.json
certs/: cert.pem  key.pem
docker/: Dockerfile  README.md
examples/: validate.rs
src/: lib.rs  main.rs
src/data/: mod.rs
src/data/repositories/: mod.rs
src/data/sources/: mod.rs  sqlite.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/repositories/: mod.rs
src/domain/usecases/: authenticate_user.rs  create_user.rs  fetch_user.rs  generate_token.rs  mod.rs  remove_user.rs
static/: index.html
