[package]
name = "jwt-test-server"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Produce JSON Web Token and expose JWKS."
repository = "https://github.com/nlfiedler/jwt-test-server"
readme = "README.md"
keywords = ["jwt", "jwks"]
license = "MIT"
exclude = [
    "TODO.org",
    "test/*",
]

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["rustls"] }
anyhow = "1.0.68"
base64 = "0.21.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
once_cell = "1.17.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
rsa = "0.8.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha-1 = "0.10.1"

[dev-dependencies]
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.23.0", features = ["full"] }
