[package]
name = "jwt-test-server"
version = "0.2.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Produce JSON Web Token and expose JWKS."
repository = "https://github.com/nlfiedler/jwt-test-server"
readme = "README.md"
keywords = ["jwt", "jwks"]
license = "MIT"
exclude = ["TODO.org", "test/*", "*.db3", "docker"]

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["rustls"] }
anyhow = "1.0.68"
argon2 = "0.5.3"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.17"
rusqlite = "0.32.1"
rsa = "0.9.2"
# rustls version must match whatever actix-web is using
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha-1 = "0.10.1"
thiserror = "1.0.63"

[dev-dependencies]
mockall = "0.13.0"
reqwest = "0.12.7"
tokio = { version = "1.23.0", features = ["full"] }
